firewood-macros/tests/compile_fail/hash_mode_non_generic.rs
use firewood_macros::hash_mode;

#[hash_mode]
fn t() {}

fn main() {}
